--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="https://progronick.github.io/pyt_game_1">Скачать игру на языке Python</a><br>
         <a href="https://progronick.github.io/durachok">Нажимай на кнопочки</a><br>
         <a href="https://progronick.github.io/stupid_game">Тупая игра</a>
+        <a href="https://progronick.github.io/ghost_game">GHOST GAME</a>
         <hr>
         <h2>Не совсем развлекательные</h2><br>
         <a href="https://progronick.github.io/Arsibe_shop.ru">Набросок интернет магазина</a><br>
