--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="https://progronick.github.io/razvod_lohov/">Развод лохов</a><br>
         <a href="https://progronick.github.io/pyt_game_1">Скачать игру на языке Python</a><br>
         <a href="https://progronick.github.io/durachok">Нажимай на кнопочки</a><br>
-        <a href="https://progronick.github.io/stupid_game">Тупая игра</a>
+        <a href="https://progronick.github.io/stupid_game">Тупая игра</a><br>
         <a href="https://progronick.github.io/ghost_game">GHOST GAME</a>
         <hr>
         <h2>Не совсем развлекательные</h2><br>
